Moving from ES6 to TypeScript and Snowpack to Vite

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <script type="module" defer>
       import { Application } from 'stimulus'
-      import ReadMore from './src/index.js'
+      import ReadMore from './src/index'
 
       const application = Application.start()
       application.register('read-more', ReadMore)
