Change stimulus namespace

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Stimulus Read More</title>
 
     <script type="module" defer>
-      import { Application } from 'stimulus'
+      import { Application } from '@hotwired/stimulus'
       import ReadMore from './src/index'
 
       const application = Application.start()
